swapped in a new version of lite-youtube and old version commented out for testing

--- a/index.html
+++ b/index.html
@@ -313,7 +313,8 @@
 
   <!-- Bootstrap JS and Popper.js CDN -->
   <script src="bootstrap.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/lite-youtube-embed@0.2.0/src/lite-yt-embed.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/lite-youtube-embed@latest/src/lite-yt-embed.js" defer></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/lite-youtube-embed@0.2.0/src/lite-yt-embed.js" defer></script> -->
   <script src="script.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
