--- a/index.html
+++ b/index.html
@@ -316,18 +316,23 @@
   <script src="https://cdn.jsdelivr.net/npm/lite-youtube-embed@0.2.0/src/lite-yt-embed.js" defer></script>
   <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/lite-youtube-embed@0.2.0/src/lite-yt-embed.js" defer></script>
-  
-<script>
-  document.addEventListener('DOMContentLoaded', () => {
-    document.querySelectorAll('lite-youtube').forEach((element) => {
-      const img = element.shadowRoot.querySelector('img');
-      if (img) {
-        img.setAttribute('loading', 'lazy');
-      }
+  <script src="https://cdn.jsdelivr.net/npm/lite-youtube-embed@0.2.0/src/lite-yt-embed.js" defer></script>
+  <script>
+    function addLazyLoading() {
+      const elements = document.querySelectorAll('lite-youtube');
+      elements.forEach((element) => {
+        const img = element.shadowRoot?.querySelector('img');
+        if (img && !img.hasAttribute('loading')) {
+          img.setAttribute('loading', 'lazy');
+        }
+      });
+    }
+    document.addEventListener('DOMContentLoaded', () => {
+      addLazyLoading();
+      setTimeout(addLazyLoading, 1000);
+      setTimeout(addLazyLoading, 3000);
     });
-  });
-</script>
-
+  </script>
 
   <script>
     if ('serviceWorker' in navigator) {
