added link to William305.com in the center section between videos on small screens

--- a/index.html
+++ b/index.html
@@ -122,6 +122,14 @@
         </p>
       </div>
 
+      <!-- Hero Image Banner -->
+      <div class="hero-banner card text-center d-block d-lg-none mt-5 mb-4 border-3">
+        <a href="https://william305.com/" target="_blank" rel="noopener noreferrer">
+          <img src="img/William305 Fork Logo.png" class="card-img-top w-50 h-auto"
+          alt="Event 1 Image - Description of the event" loading="lazy">
+        </a>
+      </div>
+
       <div class="youtube-section mt-1 mb-5 card border-3" >
         <lite-youtube videoid="UsslRHXcsE8" params="autoplay=0&modestbranding=1&rel=0"></lite-youtube>
         <p class="video-caption">
@@ -142,41 +150,7 @@
           South Beach Broadwalk
         </p>
       </div>
-
-      <div class="youtube-section mt-1 mb-5 card border-3" >
-        <lite-youtube videoid="PjJDBOsokUI" params="autoplay=0&modestbranding=1&rel=0"></lite-youtube>
-        <p class="video-caption">
-          South Beach Broadwalk
-        </p>
-      </div>
-
-      <div class="youtube-section mt-1 mb-5 card border-3" >
-        <lite-youtube videoid="fdu5q_K3T2U" params="autoplay=0&modestbranding=1&rel=0"></lite-youtube>
-        <p class="video-caption">
-          South Beach Broadwalk
-        </p>
-      </div>
-
-      <div class="youtube-section mt-1 mb-5 card border-3" >
-        <lite-youtube videoid="Ec4mu3L4F_c" params="autoplay=0&modestbranding=1&rel=0"></lite-youtube>
-        <p class="video-caption">
-          South Beach Broadwalk
-        </p>
-      </div>    
-
-      <div class="youtube-section mt-1 mb-5 card border-3" >
-        <lite-youtube videoid="QN-F6nFveqA" params="autoplay=0&modestbranding=1&rel=0"></lite-youtube>
-        <p class="video-caption">
-          South Beach Broadwalk
-        </p>
-      </div>
-
-      <div class="youtube-section mt-1 mb-5 card border-3" >
-        <lite-youtube videoid="6wMeLjx31Xc" params="autoplay=0&modestbranding=1&rel=0"></lite-youtube>
-        <p class="video-caption">
-          South Beach Broadwalk
-        </p>
-      </div>
+      
 
 <!-- Card Grid -->
       <div class="container">
